Enable oauth2password authentication on swagger pages instead of having to pass the bearer token manually.
