# api/activity/cmd/docs/swagger.json
@@ -15,8 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8083",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
         "/activities": {
             "get": {
@@ -472,11 +471,19 @@
         }
     },
     "securityDefinitions": {
-        "BearerAuth": {
-            "description": "Type \"Bearer\" followed by a space and JWT token.",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+        "OAuth2Password": {
+            "type": "oauth2",
+            "flow": "password",
+            "tokenUrl": "http://localhost:8082/api/v1/login",
+            "scopes": {
+                "read": "Grants read access",
+                "write": "Grants write access"
+            }
         }
-    }
+    },
+    "security": [
+        {
+            "OAuth2Password": []
+        }
+    ]
 }
